--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="box">
       <div class="screen">
      
-        <input type="text" name="" id="screen" placeholder="0">
+        <input type="text" name="" id="screen" placeholder="0" disabled>
 
    
       </div>
